--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "bootstrap": "^5.2.1",
+    "immer": "^9.0.19",
     "react": "^18.0.0",
     "react-bootstrap": "^2.5.0",
     "react-dom": "^18.0.0",
@@ -17,6 +18,7 @@
     "react-markdown": "^8.0.3",
     "react-router-dom": "^6.4.1",
     "react-select": "^5.4.0",
+    "use-immer": "^0.8.1",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
